# advent-of-code-2024

./: .gitignore  Cargo.toml  README.md
aoc_utils/: Cargo.toml
aoc_utils/src/: lib.rs  map.rs  utils.rs
src/_day_tpl/: main.rs
src/day_01/: main.rs
src/day_02/: main.rs
src/day_03/: main.rs  test_input.txt
src/day_04/: main.rs
src/day_05/: main.rs
src/day_06/: main.rs
src/day_07/: main.rs
src/day_08/: main.rs
src/day_10/: main.rs
src/day_11/: main.rs
src/day_12/: main.rs
template/: cookiecutter.json
template/day_{{ cookiecutter.day }}/: main.rs
template/hooks/: post_gen_project.py
