[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[features]
# to enable run tests with --features count-allocations
count-allocations = ["allocation-counter"]

[dependencies]
allocation-counter = { version = "0.8.1", optional = true }
anyhow = "1.0.93"
aoc-parse = "0.2.18"
const_format = "0.2.33"
ctor = "0.2.9"
itertools = "0.13.0"
rayon = "1.10.0"
regex = "1.11.1"
simple-log = "2.1.1"

[[bin]]
name = "day_01"
path = "src/day_01/main.rs"

[[bin]]
name = "day_02"
path = "src/day_02/main.rs"

[[bin]]
name = "day_03"
path = "src/day_03/main.rs"

[[bin]]
name = "day_04"
path = "src/day_04/main.rs"

[[bin]]
name = "day_05"
path = "src/day_05/main.rs"

[[bin]]
name = "day_06"
path = "src/day_06/main.rs"
